--- a/part2/countries/package.json
+++ b/part2/countries/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start":"powershell -ExecutionPolicy Bypass -File ./prefix-env.ps1"
   },
   "dependencies": {
     "axios": "^1.7.7",
